Mon Dec 22 12:26:18 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* cygwin/GNUmakefile.in (rubydll.def), win32/mkexports.rb
	  (Exports#exports): added VERSION.

Mon Dec 22 12:25:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/vsnprintf.c (BSD_vfprintf): fix for test_sprintf_comb.rb, by
	  wanabe in [ruby-dev:36935].

Mon Dec 22 12:05:14 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (mingw): no longer uses snprintf and vsnprintf of
	  msvcrt.  [Bug#6]

	* win32/win32.c (rb_w32_vsnprintf, rb_w32_snprintf): removed.

	* win32/Makefile.sub (config.h): vsnprintf exists in VC7 or later.

	* win32/mkexports.rb (Exports#initialize): aliases
	  rb_w32_vsnprintf and rb_w32_snprintf for binary compatibility.

	* sprintf.c (rb_str_format): uses snprintf instead of sprintf.

	* numeric.c (flo_to_s, rb_num2long, rb_num2ll): ditto.

Mon Dec 22 10:59:31 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_upto): should return enumerator if called
	  without block.  [ruby-dev:37526]

Mon Dec 22 09:54:43 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (gettable_gen): the encoding of __FILE__ should be
	  rb_filesystem_encoding().  [ruby-list:45733]

	* parse.y (gettable_gen): __FILE__ should be ASCII-8BIT when
	  filesystem encoding is US-ASCII and __FILE__ contains non 7bit
	  characters.

Mon Dec 22 02:54:56 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: temporary patch for trouble on TkAqua (> Tk8.4.9).

	* ext/tk/sample/demos-jp/widget: set encoding to a demo-code string to
	  avoid garbled text on the Code Window.

Sun Dec 21 14:55:18 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (SPLAT_PROC): splat values by hand.

Sun Dec 21 13:50:37 2008  TAKAO Kouji  <kouji@takao7.net>

	* test/readline/test_readline.rb
	  (TestReadline#test_some_characters_methods): checked encoding.

Sun Dec 21 12:23:16 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
